Closed Bug 256971 Opened 21 years ago Closed 21 years ago

Identity manager is missing for movemail accounts.

Categories

(SeaMonkey :: MailNews: Account Configuration, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.8alpha5

People

(Reporter: volkmar, Assigned: Stefan.Borggraefe)

References

Details

(Keywords: fixed-aviary1.0, regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7.2) Gecko/20040825 Firefox/0.9.1+ Build Identifier: thunderbird-i686-linux-gtk2+xft.tar.gz version 0.7+ (20040825) Reproducible: Always Steps to Reproduce: 1. 2. 3.
Sorry for sending incomplete report! In Thunderbird's Account Settings for Movemail accounts, options for all entries of "default identity" are missing. This way, users having just only one movemail account and nothing else have no chance to set "Reply-to Adress" or "Signature File". There is a text string saying: "The following is a special account. There are no identities associated with it." Nevertheless, the following prefs are generated, clearly showing the association of "id1" with "server2": user_pref("mail.account.account2.identities", "id1"); user_pref("mail.account.account2.server", "server2"); user_pref("mail.server.server2.directory", "/home/username/.thunderbird/default/Mail/localhost"); user_pref("mail.server.server2.directory-rel", "[ProfD]Mail/localhost"); user_pref("mail.server.server2.download_on_biff", true); user_pref("mail.server.server2.hostname", "localhost"); user_pref("mail.server.server2.login_at_startup", true); user_pref("mail.server.server2.name", "foo@bar.tld"); user_pref("mail.server.server2.type", "movemail"); user_pref("mail.server.server2.userName", "username"); user_pref("mail.identity.id1.compose_html", false); user_pref("mail.identity.id1.doBcc", false); user_pref("mail.identity.id1.doBccList", ""); user_pref("mail.identity.id1.draft_folder", "mailbox://bodo@localhost/Drafts"); user_pref("mail.identity.id1.drafts_folder_picker_mode", "0"); user_pref("mail.identity.id1.fcc_folder", "mailbox://username@localhost/Sent"); user_pref("mail.identity.id1.fcc_folder_picker_mode", "0"); user_pref("mail.identity.id1.fullName", "- Full Linux Username -"); user_pref("mail.identity.id1.smtpServer", "smtp1"); user_pref("mail.identity.id1.stationery_folder", "mailbox://username@localhost/Templates"); user_pref("mail.identity.id1.tmpl_folder_picker_mode", "0"); user_pref("mail.identity.id1.useremail", "bodo@kasper.tld"); user_pref("mail.identity.id1.valid", true);
Summary: Movemail prefs missing options in Accont → Movemail prefs missing options in Account Settings
Summary: Movemail prefs missing options in Account Settings → Identity manager is missing for movemail accounts.
Blocks: 253519
Confirming. This is a regression from bug 250247. Movemail should show am-main.xul, not am-serverwithnoidentities.xul and it did before bug 250247 with fixed.
Assignee: mscott → Stefan.Borggraefe
Status: UNCONFIRMED → NEW
Component: Preferences → Account Manager
Ever confirmed: true
Keywords: regression
Product: Thunderbird → MailNews
Target Milestone: --- → mozilla1.8alpha5
Version: unspecified → Trunk
Attached patch PatchSplinter Review
Attachment #160494 - Flags: superreview?(bienvenu)
Attachment #160494 - Flags: review?(mscott)
Will this Bug 256969 also be fixed by that patch?
*** Bug 256969 has been marked as a duplicate of this bug. ***
(In reply to comment #4) > Created an attachment (id=160515) > Will this Bug 256969 also be fixed by that patch? Yup. :-) I just marked it as a dupe. Basically the wrong main preferences pane is shown for Movemail accounts. My patch fixes this. But bug 253519 is unrelated to this bug.
No longer blocks: 253519
Comment on attachment 160494 [details] [diff] [review] Patch thanks for cleaning up my mess Stefan.
Attachment #160494 - Flags: review?(mscott) → review+
Flags: blocking-aviary1.0+
Keywords: fixed-aviary1.0
Comment on attachment 160494 [details] [diff] [review] Patch nope, I didn't see this one either :-(
Attachment #160494 - Flags: superreview?(bienvenu) → superreview+
Fix checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: