Bug #256971 --> Identity manager is missing for movemail accounts.

Patch by Stefan Borggraefe