mozilla/mailnews/local/src/nsMovemailIncomingServer.cpp
@@ -276,6 +276,6 @@ nsMovemailIncomingServer::GetCanSearchMessages(PRBool *canSearchMessages)
 NS_IMETHODIMP 
 nsMovemailIncomingServer::GetAccountManagerChrome(nsAString& aResult)
 {
-    aResult = NS_LITERAL_STRING("am-serverwithnoidentities.xul");
+    aResult = NS_LITERAL_STRING("am-main.xul");
     return NS_OK;
 }
